--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   firebase_core: ^4.4.0
   flutter_screenutil: ^5.9.3
   flutter_bloc: ^9.1.1
+  flutter_native_splash: ^2.4.7
+  firebase_auth: ^6.1.4
+  cloud_firestore: ^6.1.2
 
 dev_dependencies:
   flutter_test:
